[package]
name = "cgperspective"
version = "0.1.15"
authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
edition = "2018"
description = "A flexible camera model for computer graphics applications."
categories = ["graphics"]
keywords = ["graphics"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/lambdaxymox/cgperspective"

[dependencies]
num-traits = "0.2.12"
cglinalg = { git = "https://github.com/lambdaxymox/cglinalg/" }

[lib]
name = "cgperspective"
path = "src/lib.rs"

[features]
default = []

